DFR-1074: Revert back to toList