@@ -15,7 +15,6 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.GeneralApplication
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.GeneralApplicationStatus.REFERRED;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_COLLECTION;
@@ -71,7 +70,7 @@ public class GeneralApplicationReferToJudgeAboutToSubmitHandler
         caseData.put(GENERAL_APPLICATION_REFERRED_DETAIL, referredApplicationDetails);
 
         final List<GeneralApplicationCollectionData> applicationCollectionDataList
-            = existingList.stream().map(ga -> setStatus(ga, valueCode)).sorted(helper::getCompareTo).collect(Collectors.toList());
+            = existingList.stream().map(ga -> setStatus(ga, valueCode)).sorted(helper::getCompareTo).toList();
 
         caseData.put(GENERAL_APPLICATION_COLLECTION, applicationCollectionDataList);
     }
