@@ -15,7 +15,6 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.GeneralApplication
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_CREATED_BY;
@@ -58,7 +57,7 @@ public class RejectGeneralApplicationAboutToSubmitHandler
             final String valueCode = dynamicList.getValueCode();
             log.info("selected dynamic list code : {}", valueCode);
             final List<GeneralApplicationCollectionData> applicationCollectionDataList
-                = existingList.stream().filter(ga -> !ga.getId().equals(valueCode)).sorted(helper::getCompareTo).collect(Collectors.toList());
+                = existingList.stream().filter(ga -> !ga.getId().equals(valueCode)).sorted(helper::getCompareTo).toList();
             log.info("applicationCollectionDataList : {}", applicationCollectionDataList.size());
             caseData.put(GENERAL_APPLICATION_COLLECTION, applicationCollectionDataList);
         }
