@@ -12,7 +12,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.BiPredicate;
-import java.util.stream.Collectors;
 
 public abstract class DocumentDateHelper<T extends CaseDocumentTabData> {
 
@@ -36,7 +35,7 @@ public abstract class DocumentDateHelper<T extends CaseDocumentTabData> {
 
         List<T> modifiedDocuments = allDocuments.stream()
             .peek(document -> addDateToNewDocuments(documentsBeforeEvent, document))
-            .collect(Collectors.toList());
+            .toList();
 
         caseData.put(documentCollection, modifiedDocuments);
         return caseData;
@@ -49,7 +48,7 @@ public abstract class DocumentDateHelper<T extends CaseDocumentTabData> {
     }
 
     private List<T> getDocumentCollection(Map<String, Object> caseData,
-                                            String documentCollection) {
+                                          String documentCollection) {
         List<T> documentList = mapper.convertValue(caseData.get(documentCollection),
             TypeFactory.defaultInstance().constructCollectionType(ArrayList.class, documentType));
 
